[gd_scene load_steps=3 format=3 uid="uid://cjh6s23otceh2"]

[ext_resource type="Script" uid="uid://cww7rhhr07pk" path="res://scripts/game_manager.gd" id="1_ygm7g"]
[ext_resource type="FontFile" uid="uid://bqhgbt03a1lyu" path="res://assets/brackeys_platformer_assets/fonts/PixelOperator8-Bold.ttf" id="2_e26q1"]

[node name="GameManager" type="Node"]
script = ExtResource("1_ygm7g")

[node name="HUD" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="HUD"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -403.5
offset_right = 403.5
offset_bottom = 32.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_e26q1")
theme_override_font_sizes/font_size = 20
text = "Você coletou 0 moedas"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="LifeLabel" type="Label" parent="HUD"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -403.5
offset_top = 31.015
offset_right = 403.5
offset_bottom = 63.015
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_e26q1")
theme_override_font_sizes/font_size = 20
text = "Você possui 100 de vida"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="CronometroLabel" type="Label" parent="HUD"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 395.0
offset_top = 6.0
offset_right = 575.0
offset_bottom = 38.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_e26q1")
theme_override_font_sizes/font_size = 20
text = "00:00.00"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="ImmunityTimer" type="Timer" parent="."]

[node name="CronometroTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="CronometroTimer" to="." method="_on_cronometro_timeout"]
